chore: update stuff

--- a/blog/setting-up-go-templ-with-tailwind-htmx-docker/Makefile
+++ b/blog/setting-up-go-templ-with-tailwind-htmx-docker/Makefile
@@ -2,18 +2,17 @@
 
 BINARY_NAME=spendings
 
+# build builds the tailwind css sheet, and compiles the binary into a usable thing.
 build:
-	cd tailwindcss && \
-	npx tailwindcss build -i ../static/css/style.css -o ../static/css/tailwind.css -m && \
-	cd .. && \
 	go mod tidy && \
+	go generate && \
 	go build -ldflags="-w -s" -o ${BINARY_NAME}
 
-
+# dev runs the development server where it builds the tailwind css sheet,
+# and compiles the project whenever a file is changed.
 dev:
-	templ generate --watch --cmd="go run ." & \
-	cd tailwindcss && \
-	npx tailwindcss build -i ../static/css/style.css -o ../static/css/tailwind.css --watch
+	templ generate --watch --cmd="go generate" &\
+	templ generate --watch --cmd="go run ."
 
 clean:
 	go clean
