--- a/blog/setting-up-go-templ-with-tailwind-htmx-docker/Dockerfile
+++ b/blog/setting-up-go-templ-with-tailwind-htmx-docker/Dockerfile
@@ -1,16 +1,17 @@
-FROM golang:1.21-alpine as build
+FROM golang:1.22-alpine as build
 
 WORKDIR /app
 COPY . .
 
-RUN apk add make npm nodejs &&\
+RUN go install github.com/a-h/templ/cmd/templ@latest &&\
+    apk add make npm nodejs &&\
     make
 
 FROM alpine:latest as run
 
 WORKDIR /app
 COPY --from=build /app/spendings ./run
-COPY --from=build /app/static ./static
+COPY --from=build /app/db.json ./db.json
 
 EXPOSE 8080
 
